# uber_ride_prediction_ml_project

./: README.md  app.py  index.html  mlmodel.ipynb  model.pkl  pyproject.toml
